Enhancement - Menu Items modified + Shift Left Bugfix
What
=================
Got rid of one of the CVs on display in the menu.
Shift Left was too much.

--- a/resources/assets/sass/layouts/_content.scss
+++ b/resources/assets/sass/layouts/_content.scss
@@ -160,7 +160,7 @@ h4.heading {
 		}
 	}
 	.shift-left {
-		left: calc(-40% + 1px);
+		left: -30%;
 	}
 
 	.featured-focus {
